cluster/apps/oidc-oauth2-proxy-example/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: echoserver-secure
  namespace: oauth-proxy
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: echoserver-secure

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver-secure
  namespace: oauth-proxy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: echoserver-secure
  template:
    metadata:
      labels:
        app: echoserver-secure
    spec:
      containers:
      - name: echoserver
        image: gcr.io/kubernetes-e2e-test-images/echoserver:2.2
        ports:
        - containerPort: 8080
